--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,60 @@
-/* You can add global styles to this file, and also import other style files */
+
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@use '@angular/material' as mat;
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat.core();
+
+// Define the theme object.
+$ng-spotify-clone-front-theme: mat.define-theme((
+  color: (
+    theme-type: light,
+    primary: mat.$azure-palette,
+    tertiary: mat.$blue-palette,
+  ),
+  density: (
+    scale: 0,
+  )
+));
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+:root {
+  @include mat.all-component-themes($ng-spotify-clone-front-theme);
+}
+
+// Comment out the line below if you want to use the pre-defined typography utility classes.
+// For more information: https://material.angular.io/guide/typography#using-typography-styles-in-your-application.
+// @include mat.typography-hierarchy($theme);
+
+// Comment out the line below if you want to use the deprecated `color` inputs.
+// @include mat.color-variants-backwards-compatibility($theme);
+/* Importing Bootstrap SCSS file. */
+@import 'assets/scss/_bootstrap-variables';
+@import '../node_modules/bootstrap/scss/bootstrap';
+
+.nav-icon {
+    font-size: 20px;
+}
+
+.song-card-background {
+    cursor: pointer;
+    background-color: $card-inactive-background;
+}
+
+.song-card-background:hover {
+    background-color: $card-hover-background;
+    border-radius: $card-border-radius;
+}
+
+.author {
+    color: $secondary;
+    font-size: $font-size-small;
+}
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
