--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
       </div>
     </div>
   </div>
-  <!-- <footer>
+  <footer>
     <app-player class="w-100"/>
-  </footer> -->
+  </footer>
 </div>
